2003-05-13	ujwal

    * Fixed a pretty big memory leak where the text views were 
      being released and freed.
      
    * Implemented "Find" functionality to search through the text 
      view.

    * Implemented "Print Selection..." to print selected text. 
      Currently works only on rectangular selections.

2003-05-12	ujwal

    * Moved AddressBook file to new location under 
      ~/Library/Application Support/iTerm.
      
    * On startup, iTerm.app now looks for an "AutoLaunch.scpt"
      script under ~/Library/Application Support/iTerm. If it 
      finds one, it launches the apple script.


2003-05-11	ujwal

    * Added '+' in keypad mode.

2003-05-09	ujwal

    * Applying transparency when setting background color from 
      color table.
      
    * Applying transparency when setting screen mode.
    
    * Fixed strange bug in vertical page scrolling when multiple 
      sessions are opened.

2003-05-07	ujwal

    * When a new Default Session entry is created, the font is 
      set to FreeMonoBold.
      
    * Added Applescript support to get tty name. Sessions can 
      also be referenced by id which is the same as the tty name.

2003-05-07	fabian
    * Incorporated patch from Peter Lewis
    * Added paragraph style into deault attributes: We now clip
      everything that goes beyond the border.
      
2003-05-07	ujwal

    * Fixed a bug in switching font from Osaka-Mono to FreeMono.
    
    * Fixed bug in window resize.

2003-05-06	fabian/ujwal

    * Release of version 0.7.0

2003-05-06	fabian
    * Updated Korean localizations
    * Updated French localizations
    * Updated web files (not uploaded yet) and help files.
    
2003-05-05	ujwal

    * Bundling FreeMono font with the application. If Osaka-Mono is 
      seen as the preferred font, we switch to FreeMono.
      
    * Changed version number from 0.7.0 to 0.70 since it is easier to 
      parse into a number.

    * Updated some help files.

2003-05-02	ujwal
